# Exoverum

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
bootloader/: Cargo.toml
bootloader/src/: elf.rs  lib.rs  main.rs  mapping.rs  platform.rs
bootloader/src/crypto/: mod.rs  sha256.rs
bootloader/src/platform/: serial.rs  uefi.rs
crates/bootinfo/: Cargo.toml
crates/bootinfo/src/: lib.rs
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: cap.rs  kmain.rs  lib.rs  log.rs  main.rs  panic.rs  thread.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: apic.rs  context.rs  cpu.rs  gdt.rs  idt.rs  mod.rs  serial.rs
kernel/src/mm/: frame.rs  heap.rs  mod.rs  paging.rs
